feat: Finaliza a sessão sobre mim

--- a/index.html
+++ b/index.html
@@ -14,7 +14,11 @@
     </header>
 
     <main>
-        
+        <section id="sobre-mim">
+<h3 id="titulo-sobre-mim">Sobre mim</h3>
+<p class="texto-sobre-mim"> Luana a mais gata</p>
+<p class="texto-sobre-mim"> 🩷Amo meu namorado Felipe Pedro🩷</p>
+        </section>
     </main>
    </body>
 </html>
