feat: Finaliza a sessão sobre mim

--- a/index.html
+++ b/index.html
@@ -16,9 +16,18 @@
     <main>
         <section id="sobre-mim">
 <h3 id="titulo-sobre-mim">Sobre mim</h3>
-<p class="texto-sobre-mim"> Luana a mais gata</p>
-<p class="texto-sobre-mim"> 🩷Amo meu namorado Felipe Pedro🩷</p>
+<p class="texto-sobre-mim"> Olá! Eu sou a Luana, tenho 17 anos</p>
+<p class="texto-sobre-mim">Estou cursando Desinvolvimento de Sistemas no Senai</p>
         </section>
+        <section id="meus-hoobbies">
+            <h3 id="titulo-meus-hoobbies">Meus Hoobies</h3>
+           <ul>
+            <li>🍔Cozinhar</li>
+            <li>🎶Tocar</li>
+            <li>🍿Assistir filmes</li>
+            <li>🛍️Fazer compras</li>
+           </ul>
+                    </section>
     </main>
    </body>
 </html>
