feat: Finaliza a sessão contato

--- a/index.html
+++ b/index.html
@@ -27,7 +27,14 @@
             <li>🍿Assistir filmes</li>
             <li>🛍️Fazer compras</li>
            </ul>
-                    </section>
+         </section>
+
+         <section id="contato">
+        <h3>Entre em contato</h3>
+        <p>Quer conversar sobre tecnologia? Me encontre no 
+            <a href="https://github.com/Luanafollegati?tab=repositories" target="_blank"> GitHub</a> ou
+            instagram😊</p>
+      </section>
     </main>
-   </body>
+  </body>
 </html>
