Feat: Finaliza o Footer e o site

--- a/index.html
+++ b/index.html
@@ -36,5 +36,8 @@
             instagram😊</p>
       </section>
     </main>
+    <footer>
+        <p>2025 Luana - Minha primeira página Web😉</p>
+    </footer>
   </body>
 </html>
