feat: Cria a página de testes

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Primeiro site</title>
     <link rel="stylesheet" href="assets/styles/index.css">
 </head>
+<a href="pages/testes.html">Ir para a página Página teste➡️</a>
 <body>
     <header>
 
